<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="100dp"
        android:layout_margin="9dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

    <TextView
        android:id="@+id/topics1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topics"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:fontFamily="inherit"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>






        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black"/>
    <TextView
        android:padding="20dp"
        android:id="@+id/mongodb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topics1"
        android:text="@string/mongodb"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="onClick1"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    <TextView
        android:padding="20dp"
        android:id="@+id/expressjs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mongodb"

        android:text="@string/expressjs"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="onClick2"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:maxLines="1"
        android:ellipsize="end"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

    <TextView
        android:padding="20dp"
        android:id="@+id/angularjs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expressjs"
        android:text="@string/angularjs"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="onClick3"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

    <TextView
        android:padding="20dp"
        android:id="@+id/nodejs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nodejs"
        android:text="@string/nodejs"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="#000000"
        android:clickable="true"
        android:onClick="onClick4"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>
            </LinearLayout>
    </ScrollView>
    </android.support.v7.widget.CardView>

</RelativeLayout>


