<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="100dp"
        android:layout_margin="9dp">

       <ScrollView
           android:layout_height="match_parent"
           android:layout_width="match_parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:paddingTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/bienvenue"
                android:textAlignment="center"
                android:textSize="30dp"/>


            <EditText
                android:paddingLeft="10dp"
                android:paddingTop="40dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#000000"
                android:typeface="sans"
                android:hint="Email"
                android:text="@string/email"/>

            <EditText
                android:paddingLeft="10dp"
                android:layout_below="@+id/email"
                android:paddingTop="50dp"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#000000"
                android:hint="Password"
                android:text="@string/password"/>



            <Button
                android:id="@+id/button1"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:text="Continue Learning"
                android:onClick="continuelearning"
                android:typeface="sans"/>

        </LinearLayout>


        </ScrollView>

    </android.support.v7.widget.CardView>

    </RelativeLayout>
